# dingo-store

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: dingo-libexpr.cmake
conf/: coordinator-gflags.conf  coordinator.template.yaml  diskann.template.yaml  document-gflags.conf  document.template.yaml  index-gflags.conf  index.template.yaml  store-gflags.conf  store.template.yaml
proto/: error.proto  index.proto  store.proto
src/br/: backup.cc  backup.h  backup_data.cc  backup_data.h  backup_data_base.cc  backup_data_base.h  backup_meta.cc  backup_meta.h  backup_meta_base.cc  backup_meta_base.h  backup_sdk_data.cc  backup_sdk_data.h  backup_sdk_meta.cc  backup_sdk_meta.h  backup_sql_data.cc  backup_sql_data.h  backup_sql_meta.cc  backup_sql_meta.h  helper.cc  helper.h  interaction_manager.cc  interaction_manager.h  interation.cc  interation.h  main.cc  parameter.cc  parameter.h  restore.cc  restore.h  restore_data.cc  restore_data_base.cc  restore_data_base.h  restore_meta.cc  restore_meta.h  restore_region_data.cc  restore_region_data_manager.cc  restore_region_meta.cc  restore_region_meta_manager.cc  restore_region_meta_manager.h  restore_sdk_meta.cc  (+7 more)
src/client/: coordinator_client_function.h  coordinator_client_function_coor.cc  dingodb_client.cc  store_client_function.cc  store_client_function.h  (+1 more)
test/: CMakeLists.txt  test_omp.cc  test_rocks_engine.cc  test_vector_index_flat_hnsw_mem_leak.cc
test/unit_test/: CMakeLists.txt  main.cc  test_dingo_libexpr.cc  test_vector_index_flat_smid.cc
test/unit_test/br/: test_restore_meta.cc  test_restore_region_data.cc
(+51 files in other folders)
